--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "copy-webpack-plugin": "^12.0.2",
+    "file-loader": "^6.2.0",
     "gh-pages": "^6.1.1",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
@@ -21,7 +23,6 @@
   },
   "dependencies": {
     "babel-loader": "^9.1.3",
-    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^4.0.0"
