--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "copy-webpack-plugin": "^12.0.2",
     "file-loader": "^6.2.0",
     "gh-pages": "^6.1.1",
+    "html-loader": "^5.1.0",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
@@ -25,6 +26,8 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
-    "style-loader": "^4.0.0"
+    "mini-css-extract-plugin": "^2.9.1",
+    "style-loader": "^4.0.0",
+    "url-loader": "^4.1.1"
   }
 }
